# sales-rep-agent

./: .env  .gitignore  README.md  audio_wip.py  automate_conversation_tests.py  capab_generator.py  conversation_tests.py  document_generator.py  main.py  price_generator.py  prject_docs_generator.py  pyproject.toml  run_streamlit.py  streamlit_app.py  temp.py  test_langsmith.py  voice_service_server.py  wip.txt
.streamlit/: config.toml
agent/: AgentAPI.py  graph.py  prompts.py  state.py
audio/: record.py  stt.py  tts.py  tts_optimization_test.py  voice_service.py
capability_docs/: SL-CAP-capability_roadmap-09bf53.txt  SL-CAP-capability_roadmap-2aa87d.txt  SL-CAP-capability_roadmap-4f6059.txt  SL-CAP-capability_roadmap-59433c.txt  SL-CAP-capability_roadmap-656848.txt  SL-CAP-capability_roadmap-8ba37f.txt  SL-CAP-capability_roadmap-e709d2.txt  SL-CAP-implementation_playbook-559217.txt  SL-CAP-implementation_playbook-5f7aee.txt  SL-CAP-implementation_playbook-b0ee61.txt  SL-CAP-implementation_playbook-f13155.txt  capability_document_index.json
data/: company_data.json  leads.json  long_term_memory.json
generated_docs/: SL-meeting_notes-45c214.txt  SL-meeting_notes-814612.txt  SL-meeting_notes-8324f2.txt  SL-meeting_notes-8ea662.txt  SL-meeting_notes-adfab8.txt  SL-meeting_notes-ffee8e.txt  SL-project_postmortem-0fd047.txt  SL-project_postmortem-1c9472.txt  SL-project_postmortem-5e66fc.txt  SL-project_postmortem-706059.txt  SL-project_postmortem-8ae4f8.txt  SL-project_postmortem-8c0422.txt  SL-project_postmortem-8cb197.txt  SL-project_postmortem-98f915.txt  (+9 more)
(+121 files in other folders)
