[project]
name = "sales-rep-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0.post1",
    "google-generativeai>=0.8.5",
    "ipython>=9.4.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.6.0",
    "pypdf2>=3.0.1",
    "rank-bm25>=0.2.2",
]
